syntax = 'proto3';

option go_package = "xyron/";
option php_namespace = "prokits\\xyron";
option java_package = "com.github.blackjack200.xyron";
option java_generic_services = true;
option php_generic_services = true;

package xchange;

import "google/protobuf/empty.proto";
import "player_wrappers.proto";
import "player.proto";
import "anticheat_types.proto";

message PlayerReceipt {
  string internalId = 1;
}

message TimestampedReportData {
  repeated WildcardReportData data = 1;
}

message AddPlayerRequest{
  Player player = 1;
  //timestamp->report data
  map<int64, TimestampedReportData> data = 2;
}

message ReportData{
  PlayerReceipt player = 1;
  double latency = 2;
  //timestamp->report data
  map<int64, TimestampedReportData> data = 3;
}

message ReportResponse{
  repeated JudgementData judgements = 1;
}

message BatchedReportData{
  repeated ReportData data = 1;
}

message BatchedReportResponseEntry{
  PlayerReceipt player = 1;
  repeated JudgementData judgements = 2;
}

message BatchedReportResponse{
  repeated BatchedReportResponseEntry data = 1;
}

message JudgementData{
  string type = 1;
  Judgement judgement = 2;
  string message = 3;
}

service Anticheat {
  rpc AddPlayer(AddPlayerRequest) returns (PlayerReceipt) {}
  rpc RemovePlayer(PlayerReceipt) returns (google.protobuf.Empty) {}
  rpc Report(ReportData) returns (ReportResponse){}
  rpc ReportBatched(BatchedReportData) returns (BatchedReportResponse){}
}
