syntax = 'proto3';

option go_package = "xyron/";
option php_namespace = "prokits\\xyron";
option java_package = "com.github.blackjack200.xyron";
option java_generic_services = true;
option php_generic_services = true;

package xchange;

import "google/protobuf/empty.proto";
import "player_wrappers.proto";
import "anticheat_types.proto";

message PlayerReceipt {
  string internalId = 1;
}

message TimestampedReportData {
  int32 timestamp = 1;
  repeated WildcardReportData data = 2;
}

//TODO improve this
message ServerExecution{
  string type = 1;
  string extraData = 2;
}

message AddPlayerRequest{
  PlayerReceipt player = 1;
  //timestamp->report data
  map<int32, TimestampedReportData> data = 2;
}

message PlayerReport{
  PlayerReceipt player = 1;
  //timestamp->report data
  map<int32, TimestampedReportData> data = 2;
}

message JudgementData{
  repeated ServerExecution extraExecutions = 1;
  Judgement judgement = 2;
  string type = 3;
  string message = 4;
}

service Anticheat {
  rpc AddPlayer(AddPlayerRequest) returns (PlayerReceipt) {}
  rpc RemovePlayer(PlayerReceipt) returns (google.protobuf.Empty) {}
  rpc Report(PlayerReport) returns (JudgementData){}
}
